--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <main id="studio">
       <!--Герой-->
       <section class="hero">
-        <h1>
+        <h1 class="hero-title">
           Эффективные решения <br />
           для вашего бизнеса
         </h1>
@@ -128,7 +128,7 @@
               г. Киев, пр-т Леси Украинки, 26
             </a>
           </li>
-          <li><a href="mailto:info@devstudio.com" class="address-link">info@devstudio.com</a></li>
+          <li><a href="mailto:info@example.com" class="address-link">info@example.com</a></li>
           <li><a href="tel:+380961111111" class="address-link">+38 096 111 11 11</a></li>
         </ul>
       </address>
