--- a/portfolio.html
+++ b/portfolio.html
@@ -44,84 +44,112 @@
         <!--Проекты портфолио-->
         <ul class="portfolio-project-list">
           <li>
-            <img src="./images/portfolio/Технокряк.jpg" alt="Технокряк" width="370" height="294" />
-            <h2 class="portfolio-project-title">Технокряк</h2>
-            <p class="portfolio-project-text">Веб-сайт</p>
+            <a href="#" class="portfolio-project-link">
+              <img
+                src="./images/portfolio/Технокряк.jpg"
+                alt="Технокряк"
+                width="370"
+                height="294"
+              />
+              <h2 class="portfolio-project-title">Технокряк</h2>
+              <p class="portfolio-project-text">Веб-сайт</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/portfolio/ПостерNewOrleanVSGoldenStar.jpg"
-              alt="Постер New Orlean vs Golden Star"
-              width="370"
-              height="294"
-            />
-            <h2 class="portfolio-project-title">Постер New Orlean vs Golden Star</h2>
-            <p class="portfolio-project-text">Дизайн</p>
+            <a href="#" class="portfolio-project-link">
+              <img
+                src="./images/portfolio/ПостерNewOrleanVSGoldenStar.jpg"
+                alt="Постер New Orlean vs Golden Star"
+                width="370"
+                height="294"
+              />
+              <h2 class="portfolio-project-title">Постер New Orlean vs Golden Star</h2>
+              <p class="portfolio-project-text">Дизайн</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/portfolio/РесторанSeafood.jpg"
-              alt="Ресторан Seafood"
-              width="370"
-              height="294"
-            />
-            <h2 class="portfolio-project-title">Ресторан Seafood</h2>
-            <p class="portfolio-project-text">Приложение</p>
+            <a href="#" class="portfolio-project-link">
+              <img
+                src="./images/portfolio/РесторанSeafood.jpg"
+                alt="Ресторан Seafood"
+                width="370"
+                height="294"
+              />
+              <h2 class="portfolio-project-title">Ресторан Seafood</h2>
+              <p class="portfolio-project-text">Приложение</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/portfolio/ПроектPrime.jpg"
-              alt="Проект Prime"
-              width="370"
-              height="294"
-            />
-            <h2 class="portfolio-project-title">Проект Prime</h2>
-            <p class="portfolio-project-text">Маркетинг</p>
+            <a href="#" class="portfolio-project-link">
+              <img
+                src="./images/portfolio/ПроектPrime.jpg"
+                alt="Проект Prime"
+                width="370"
+                height="294"
+              />
+              <h2 class="portfolio-project-title">Проект Prime</h2>
+              <p class="portfolio-project-text">Маркетинг</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/portfolio/ПроектBoxes.jpg"
-              alt="Проект Boxes"
-              width="370"
-              height="294"
-            />
-            <h2 class="portfolio-project-title">Проект Boxes</h2>
-            <p class="portfolio-project-text">Приложение</p>
+            <a href="#" class="portfolio-project-link">
+              <img
+                src="./images/portfolio/ПроектBoxes.jpg"
+                alt="Проект Boxes"
+                width="370"
+                height="294"
+              />
+              <h2 class="portfolio-project-title">Проект Boxes</h2>
+              <p class="portfolio-project-text">Приложение</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/portfolio//InspirationHasNoBorders.jpg"
-              alt="Inspiration has no Borders"
-              width="370"
-              height="294"
-            />
-            <h2 class="portfolio-project-title">Inspiration has no Borders</h2>
-            <p class="portfolio-project-text">Веб-сайт</p>
+            <a href="#" class="portfolio-project-link">
+              <img
+                src="./images/portfolio//InspirationHasNoBorders.jpg"
+                alt="Inspiration has no Borders"
+                width="370"
+                height="294"
+              />
+              <h2 class="portfolio-project-title">Inspiration has no Borders</h2>
+              <p class="portfolio-project-text">Веб-сайт</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/portfolio/ИзданиеLimitedEdition.jpg"
-              alt="Издание Limited Edition"
-              width="370"
-              height="294"
-            />
-            <h2 class="portfolio-project-title">Издание Limited Edition</h2>
-            <p class="portfolio-project-text">Дизайн</p>
+            <a href="#" class="portfolio-project-link">
+              <img
+                src="./images/portfolio/ИзданиеLimitedEdition.jpg"
+                alt="Издание Limited Edition"
+                width="370"
+                height="294"
+              />
+              <h2 class="portfolio-project-title">Издание Limited Edition</h2>
+              <p class="portfolio-project-text">Дизайн</p>
+            </a>
           </li>
           <li>
-            <img src="./images/portfolio/ПроектLAB.jpg" alt="Проект LAB" width="370" height="294" />
-            <h2 class="portfolio-project-title">Проект LAB</h2>
-            <p class="portfolio-project-text">Маркетинг</p>
+            <a href="#" class="portfolio-project-link">
+              <img
+                src="./images/portfolio/ПроектLAB.jpg"
+                alt="Проект LAB"
+                width="370"
+                height="294"
+              />
+              <h2 class="portfolio-project-title">Проект LAB</h2>
+              <p class="portfolio-project-text">Маркетинг</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/portfolio/GrowingBusiness.jpg"
-              alt="Growing Business"
-              width="370"
-              height="294"
-            />
-            <h2 class="portfolio-project-title">Growing Business</h2>
-            <p class="portfolio-project-text">Приложение</p>
+            <a href="#" class="portfolio-project-link">
+              <img
+                src="./images/portfolio/GrowingBusiness.jpg"
+                alt="Growing Business"
+                width="370"
+                height="294"
+              />
+              <h2 class="portfolio-project-title">Growing Business</h2>
+              <p class="portfolio-project-text">Приложение</p>
+            </a>
           </li>
         </ul>
       </section>
@@ -142,7 +170,7 @@
               г. Киев, пр-т Леси Украинки, 26
             </a>
           </li>
-          <li><a href="mailto:info@devstudio.com" class="address-link">info@devstudio.com</a></li>
+          <li><a href="mailto:info@example.com" class="address-link">info@example.com</a></li>
           <li><a href="tel:+380961111111" class="address-link">+38 096 111 11 11</a></li>
         </ul>
       </address>
